k8s/node-api-deployment.yaml
# node-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: node-api
  template:
    metadata:
      labels:
        app: node-api
    spec:
      containers:
      - name: node-api
        image: lovetwocode/node-api
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
