k8s/node-api-service.yaml
# node-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api-service
spec:
  type: ClusterIP
  selector:
    app: node-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
